Prevent overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,7 +134,7 @@ a {
 }
 
 #notePage {
-  width: 100vw;
+  width: calc(100vw - 250px);
   padding: 15px;
   display: flex;
   flex-direction: row;
